Should be just one author.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Orbis
-Author: Pronamic, Karel-Jan Tolsma
-Author URI: http://pronamic.nl/
+Author: Pronamic
+Author URI: http://www.pronamic.nl/
 Description: The theme for Orbis based on Bootstrap.
 Version: 1.0.0
 Tags: bootstrap, clean, white, black
