--- a/css/app.css
+++ b/css/app.css
@@ -404,10 +404,6 @@ table tr .actions {
 }
 
 table tr .nubbin {
-	visibility: hidden;
-}
-
-table tr:hover .nubbin {
 	background: #fff;
 
 	box-shadow: 1px 0 1px rgba(0, 0, 0, 0.2);
@@ -416,12 +412,16 @@ table tr:hover .nubbin {
     -webkit-border-radius: 4px; 
     border-radius: 4px;
 
-	padding: 5px;
+	padding: 2px 5px;
 
 	position: absolute;
 	right: -15px;
-	top: 0;
+	top: -2px;
 
+	visibility: hidden;
+}
+
+table tr:hover .nubbin {
 	visibility: visible;
 }
 
