Getting ready for v1.1.0.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 /*
-Theme Name:    Orbis
-Author:        Pronamic
-Author URI:    http://www.pronamic.nl/
-Description:   The theme for Orbis based on Bootstrap.
-Version:       1.1.0
-Tags:          bootstrap, clean, white, black
+Theme Name: Orbis
+Theme URI: http://wp.pronamic.eu/themes/orbis/
+
+Author: Pronamic
+Author URI: http://www.pronamic.nl/
+
+Description: The theme for Orbis based on Bootstrap.
+
+Version: 1.1.0
+
+Tags: bootstrap, clean, white, black
+
+Text Domain: orbis
 */
 
 /* Body and structure
