Getting ready for version 1.1.3.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Orbis
-Theme URI: http://wp.pronamic.eu/themes/orbis/
+Theme URI: http://www.happywp.com/themes/orbis/
 
 Author: Pronamic
-Author URI: http://www.pronamic.nl/
+Author URI: http://www.pronamic.eu/
 
 Description: The theme for Orbis based on Bootstrap.
 
-Version: 1.1.2
+Version: 1.1.3
 
 Tags: bootstrap, clean, white, black
 
